@@ -1,4 +1,10 @@
 ADD_DEFINITIONS(-DBUILDING_WITH_CMAKE=1)
+ADD_DEFINITIONS(-DHAVE_CONFIG_H=1)
+
+IF (CMAKE_COMPILER_IS_GNUCC)
+    SET(CMAKE_CXX_FLAGS "-fPIC ${CMAKE_CXX_FLAGS}")
+    SET(CMAKE_C_FLAGS "-fPIC ${CMAKE_C_FLAGS}")
+ENDIF ()
 
 SET(WTF_INCLUDE_DIRECTORIES
     "${JAVASCRIPTCORE_DIR}"
@@ -7,25 +13,6 @@ SET(WTF_INCLUDE_DIRECTORIES
     "${DERIVED_SOURCES_DIR}"
 )
 
-SET(WEBKIT_LIBRARY_TYPE STATIC)
-
-IF (ICU_FOUND)
-    SET(WTF_USE_ICU_UNICODE 1)
-    ADD_DEFINITIONS(-DWTF_USE_ICU_UNICODE=1)
-    LIST(APPEND WTF_INCLUDE_DIRECTORIES ${ICU_INCLUDE_DIRS})
-ENDIF ()
-
-IF (CMAKE_HAVE_PTHREAD_H AND NOT WTF_PLATFORM_QT)
-    SET(WTF_USE_PTHREADS 1)
-    ADD_DEFINITIONS(-DWTF_USE_PTHREADS=1)
-ELSE ()
-    ADD_DEFINITIONS(-DENABLE_JSC_MULTIPLE_THREADS=0)
-ENDIF ()
-
 IF (WTF_OS_UNIX)
     ADD_DEFINITIONS(-DXP_UNIX)
 ENDIF (WTF_OS_UNIX)
-
-ADD_DEFINITIONS(-DHAVE_CONFIG_H=1)
-
-FILE(MAKE_DIRECTORY ${DERIVED_SOURCES_DIR})
