@@ -22,8 +22,12 @@ FIND_PACKAGE(LibXslt 1.1.7 REQUIRED)
 FIND_PACKAGE(ICU REQUIRED)
 FIND_PACKAGE(Threads REQUIRED)
 
+SET(WTF_USE_PTHREADS 1)
+ADD_DEFINITIONS(-DWTF_USE_PTHREADS=1)
+
 SET(WTF_USE_ICU_UNICODE 1)
 ADD_DEFINITIONS(-DWTF_USE_ICU_UNICODE=1)
+LIST(APPEND WTF_INCLUDE_DIRECTORIES ${ICU_INCLUDE_DIRS})
 
 SET(WTF_PLATFORM_CAIRO 1)
 ADD_DEFINITIONS(-DWTF_PLATFORM_CAIRO=1)
