@@ -6,11 +6,8 @@ MACRO(WEBKIT_SET_EXTRA_COMPILER_FLAGS _target)
     IF (${OLD_COMPILE_FLAGS} STREQUAL "OLD_COMPILE_FLAGS-NOTFOUND")
         SET(OLD_COMPILE_FLAGS "")
     ENDIF ()
-    IF (${CMAKE_HOST_SYSTEM_PROCESSOR} STREQUAL "x86_64")
-        SET(OLD_COMPILE_FLAGS "${OLD_COMPILE_FLAGS} -fPIC")
-    ENDIF ()
     SET_TARGET_PROPERTIES (${_target} PROPERTIES
-       COMPILE_FLAGS "${OLD_COMPILE_FLAGS} -fno-exceptions -fstrict-aliasing -fvisibility=hidden")
+       COMPILE_FLAGS "-fno-exceptions -fstrict-aliasing -fvisibility=hidden ${OLD_COMPILE_FLAGS}")
     UNSET(OLD_COMPILE_FLAGS)
   ENDIF ()
 ENDMACRO()
